# proxima

./: .gitignore  README.md  compose.yml
agents/: Makefile  README.md  deploy.py  pyproject.toml  requirements.txt
agents/proxima/: agent.py  evalset72790.evalset.json  prompt.py  toolbox_tools.py  tools.py
agents/proxima/mcp-toolbox/: tools.yaml
agents/proxima/sub_agents/career_agent/: __init__.py  agent.py  prompt.py
agents/proxima/sub_agents/quest_agent/: __init__.py  agent.py  prompt.py
agents/proxima/sub_agents/quest_agent/sub_agents/: .env.template  deploy.py
agents/proxima/sub_agents/quest_agent/sub_agents/quest_create_agent/: __init__.py  agent.py  prompt.py
api/: .env.template  Dockerfile  Dockerfile_tool  Makefile  README.md  db.py  information_instruction.py  main.py  pyproject.toml  services.py  tool_main.py
api/constants/: messages.py
api/type/: chat.py
documents/: DBDESIGN.md
iot/: .env.template  Makefile  README.md  main.py  pyproject.toml
tasks/: .env.template  Makefile  README.md  main.py  pyproject.toml  requirements.txt
tasks/common/: db.py  firestore.py  schemas.py  tools.py
tasks/services/advice/: advice.py  instruction.py
tasks/services/crawl_events/: crawl_events.py  instruction.py
tasks/services/create_initiatives/: create_initiatives.py
tasks/services/create_quests/: create_quests.py  instruction.py
tasks/services/manuscript/: characters.py  instruction.py  iot.py  manuscript.py
tasks/services/news/: news.py
tasks/services/routine/: routine.py
tasks/services/save_old_memory/: __init__.py  save_old_memory.py
terraform/: firebase.tf  firestore.rules  main.tf  storage.rules  variables.tf
web/: Dockerfile  README.md  biome.json  drizzle.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json
web/app/: layout.tsx
web/app/(page)/: page.tsx
web/app/(page)/(auth)/signin/: page.tsx
web/app/(page)/(auth)/signup/: page.tsx
web/app/(page)/growth/: page.tsx
web/app/(page)/informations/: page.tsx
web/app/(page)/quests/: page.tsx
web/app/(page)/tutorial/: page.tsx
web/app/(page)/usage/: page.tsx
web/app/api/advice/: route.ts
web/app/api/career-goals/: route.ts
web/app/api/habit/: route.ts
web/app/api/information/: route.ts
web/app/api/initiatives/: route.ts
web/app/api/news/: route.ts
web/app/api/routines/: route.ts
web/app/api/tasks/: route.ts
web/app/api/tutorial/: route.ts
web/app/types/: index.ts
web/components/: AdviceContent.tsx  AudioPlayer.tsx  CareerGoalsContent.tsx  ClientGuard.tsx  InitiativesContent.tsx  MainLayout.tsx  Review.tsx  RoutinesContent.tsx  Sidebar.tsx  SimplePlayer.tsx  theme-provider.tsx
web/components/Chat/: ChatHeader.tsx  ChatInterface.tsx  ChatSummary.tsx  MessageModel.tsx  MessageUser.tsx
web/components/DailyQuests/: DailyQuestsContent.tsx  EmptyQuestCard.tsx  NewQuestForm.tsx  QuestCard.tsx
web/components/Informations/: ArticleCard.tsx  ArticleFilters.tsx  InformationsClient.tsx
web/components/Vrm/: Model.tsx  Viewer.tsx
web/components/ui/: badge.tsx  button.tsx  calendar.tsx  checkbox.tsx  progress.tsx  sheet.tsx  tabs.tsx  textarea.tsx  toast.tsx  tooltip.tsx
web/db/: index.ts  migrate.ts  schema.ts
web/db/migrations/: 0000_silky_grey_gargoyle.sql
web/db/migrations/meta/: 0000_snapshot.json  _journal.json
web/db/repositories/: chatRepository.ts
web/hooks/: auth.ts  careerGoals.ts  information.ts  initiatives.ts  routines.ts  tasks.ts  use-toast.ts
web/lib/: constants.ts  db.ts  state.ts
web/lib/actions/: auth.ts
web/lib/firebase/: client-app.ts  firestore.ts  server-app.ts
web/public/: manifest.json
